# seed_hooks_guide

./: package.json
.github/workflows/: main.yml
configs/: tailwind.config.js
crate/: Cargo.toml  Makefile.toml
crate/src/: Glossary  lib.rs
crate/src/page/: about.rs  api_ref.rs  home.rs  mod.rs  not_found.rs  tutorial.rs  tutorial_example.rs
crate/src/page/partial/: footer.rs  header.rs
css/: custom.css  styles.css
entries/: index.hbs
entries/templates/: css.hbs  head_scripts.hbs  social_media.hbs
static/: prism.css  prism.js
